# my-lang

./: Makefile  README.md  asm-output.asm  asm-test-with-annotated-asm.sn  asm-test.sn  cli.py  compile_asm.sh  copies.sn  grammar.txt  notes.txt  plan.md  run.sh  todo.txt
src/testing/: CMakeLists.txt  lexer_tests.cpp  test_harness.cpp  test_harness.h  test_lexer.cpp  test_parser.cpp  test_symtab.cpp
src/testing/samples/: asm_and_errors.sn  control_flow.sn  functions.sn  memory.sn  pointers.sn  var_decl.sn
src/testing/snapshots/lexer/: asm_and_errors.sn.snap  (+6 more)
testing/: CMakeLists.txt  Makefile  main.cpp  test_ir.cpp  test_lexer.cpp  test_parser.cpp  test_symtab.cpp  test_x86_64_gen.cpp  util.h
testing/ir-samples/: arithmetic.sn  fizzbuzz.sn  funcs.sn  inout.sn  loops.sn
testing/samples/: asm_and_errors.sn  control_flow.sn  functions.sn  pointers.sn  read.sn  stdin.sn  structs.sn  var_decl.sn
testing/snapshots/: test_ir.IrTests.IrArithmetic.approved.txt  test_ir.IrTests.IrAsmAndErrors.approved.txt  test_ir.IrTests.IrFizzBuzz.approved.txt  test_ir.IrTests.IrFuncs.approved.txt  test_ir.IrTests.IrFunctions.approved.txt  test_ir.IrTests.IrInOut.approved.txt  test_ir.IrTests.IrLoops.approved.txt  test_ir.IrTests.IrPointers.approved.txt  test_ir.IrTests.IrStructs.approved.txt  test_ir.IrTests.IrVarDecl.approved.txt  test_lexer.LexerTests.LexerAsmAndErrors.approved.txt  test_lexer.LexerTests.LexerFunctions.approved.txt  test_lexer.LexerTests.LexerPointers.approved.txt  test_lexer.LexerTests.LexerRead.approved.txt  test_lexer.LexerTests.LexerStructs.approved.txt  test_lexer.LexerTests.LexerVarDecl.approved.txt  test_parser.ParserTests.ParserAsmAndErrors.approved.txt  test_parser.ParserTests.ParserControlFlow.approved.txt  test_parser.ParserTests.ParserFunctions.approved.txt  test_parser.ParserTests.ParserMemory.approved.txt  test_parser.ParserTests.ParserPointers.approved.txt  test_parser.ParserTests.ParserRead.approved.txt  test_parser.ParserTests.ParserStructs.approved.txt  test_symtab.SymTabTests.SymTabControlFlow.approved.txt  test_symtab.SymTabTests.SymTabPointers.approved.txt  test_symtab.SymTabTests.SymTabStdin.approved.txt  test_symtab.SymTabTests.SymTabStructs.approved.txt  test_symtab.SymTabTests.SymTabVarDecl.approved.txt  test_x86_64_gen.x86GenTests.x86GenArithmetic.approved.txt  test_x86_64_gen.x86GenTests.x86GenAsmAndErrors.approved.txt  test_x86_64_gen.x86GenTests.x86GenControlFlow.approved.txt  test_x86_64_gen.x86GenTests.x86GenFizzBuzz.approved.txt  test_x86_64_gen.x86GenTests.x86GenFuncs.approved.txt  test_x86_64_gen.x86GenTests.x86GenFuncs.received.txt  test_x86_64_gen.x86GenTests.x86GenFunctions.approved.txt  test_x86_64_gen.x86GenTests.x86GenInOut.approved.txt  test_x86_64_gen.x86GenTests.x86GenInOut.received.txt  test_x86_64_gen.x86GenTests.x86GenLoops.approved.txt  test_x86_64_gen.x86GenTests.x86GenPointers.approved.txt  test_x86_64_gen.x86GenTests.x86GenStdin.approved.txt  (+2 more)
(+80 files in other folders)
